# alpaca-trading

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/skills/alpaca-api/: SKILL.md
.claude/skills/business-frameworks/: SKILL.md
.claude/skills/claude-cli-agent/: SKILL.md
.claude/skills/performance-evaluation/: SKILL.md
.claude/skills/quant-strategy-design/: SKILL.md
.claude/skills/risk-management/: SKILL.md
.claude/skills/strategy-improvement-cycle/: SKILL.md
.claude/skills/structured-debate/: SKILL.md
deploy/launchd/: com.alpaca-trading.eod.plist  com.alpaca-trading.health.plist  com.alpaca-trading.midday.plist  com.alpaca-trading.morning.plist  setup.sh
docs/: action-plan.md  phase1-technical-spec.md  planning-log.md  review-arch.md  review-devil.md  review-quant.md  review-risk.md  review-strat.md  strategy.md  system-design.md
modules/: backtest.py  config.py  data_collector.py  db.py  health.py  llm_analyzer.py  logger.py  macro.py  order_executor.py  risk_manager.py  state_manager.py  stress_test.py  technical.py  types.py  universe.py
prompts/: trading_decision.md
tests/: conftest.py  test_backtest.py  test_config.py  test_data_collector.py  test_db.py  test_health.py  test_integration.py  test_llm_analyzer.py  test_logger.py  test_macro.py  test_main.py  test_order_executor.py  test_risk_manager.py  test_state_manager.py  test_stress_test.py  test_technical.py  test_types.py  test_universe.py
tools/: verify_alpaca.py
(+31 files in other folders)
